# revival

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  build.sh  imgui.ini  run.sh
models/: plane.gltf  shadow_test.gltf
shaders/: billboard.frag  billboard.vert  debug_line.vert  debug_triangle.vert  depth.vert  light.glsl  mesh.frag  mesh.vert  quad.frag  quad.vert  shadow.frag  shadow.vert  shadow_debug.frag  skybox.frag  skybox.vert  solid.frag  solid.vert  stub.frag  triangle.vert  types.glsl
src/: common.cpp  common.h  descriptor_writer.cpp  device.cpp  device.h  engine.cpp  engine.h  main.cpp  mesh_renderer.cpp  mesh_renderer.h  precompiled.cpp  resources.h  scene.cpp  scene.h  types.h
src/math/: math.cpp
src/renderers/: mesh_renderer.cpp  solid_renderer.cpp  solid_renderer.h
src/revival/: application.cpp  application.h  asset_manager.cpp  asset_manager.h  audio_manager.cpp  audio_manager.h  billboard_pass.cpp  billboard_pass.h  camera.cpp  camera.h  engine.cpp  engine.h  fs.cpp  fs.h  game_manager.cpp  game_manager.h  game_object.h  globals.h  logger.h  main.cpp  precompiled.cpp  renderer.cpp  renderer.h  resources.h  scene_manager.cpp  scene_manager.h  scene_pass.cpp  scene_pass.h  shadow_debug_pass.cpp  shadow_debug_pass.h  shadow_pass.cpp  shadow_pass.h  skybox_pass.cpp  skybox_pass.h  transform.cpp  transform.h  types.h  util.cpp  util.h
src/revival/math/: math.cpp  math.h
src/revival/passes/: billboard_pass.cpp  billboard_pass.h  scene_pass.cpp  scene_pass.h  shadow_debug_pass.cpp  shadow_debug_pass.h  shadow_pass.cpp  shadow_pass.h  skybox_pass.cpp  skybox_pass.h
src/revival/physics/: debug_renderer.cpp  debug_renderer.h  helpers.h  jolt_utils.cpp  jolt_utils.h  physics.cpp  physics.h  physics_layers.h  physics_listeners.h  rigid_body.h
src/revival/vulkan/: common.h  descriptor_writer.cpp  descriptor_writer.h  graphics.cpp  graphics.h  pipeline_builder.cpp  pipeline_builder.h  resources.h  utils.cpp  utils.h  vk_context.cpp  vk_context.h
